# grooveshop-django-api

./: .coveragerc  .dockerignore  .editorconfig  .env.docker  .env.example  .env.production  .flake8  .gitignore  .pre-commit-config.yaml  CART_ORDER_AUDIT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE.md  Makefile  README.md  Smart Checkout _ Viva.com Developer Portal.html  TESTING.md  Viva Documentation.html  Webhooks for payments _ Viva.com Developer Portal.html  __main__.py  app.compose.yml  check_categories.py  debug_queries.py  dev.Dockerfile  docker-compose.yml  final_verification.py  gunicorn.conf.py  gunicorn_worker.py  infra.compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  qodana.yaml  requirements.txt  run.py  schema.json  schema.yml  (+12 more)
.claude/: .mcp.json  settings.local.json
.junie/: guidelines.md
account/: account_inactive.html  email.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  verification_sent.html
admin/: admin.py  apps.py  badges.py  base.py  dashboard.py  displays.py  environment.py  export.py  mixins.py  permissions.py  signals.py
app/: __init__.py  asgi.py  celery.py  celery_setup.py  settings.py  urls.py  uvicorn_server.py
asgi/: __init__.py  cors_handler.py  gzip_compression.py  health_check.py
authentication/: apps.py  serializers.py  signals.py
blog/: admin.py  apps.py  filters.py  signals.py  tasks.py  urls.py  utils.py
cart/: admin.py  factories.py  managers.py  models.py  paginators.py  serializers.py  service.py  services.py  urls.py  views.py
config/: __init__.py  auth.py  base.py  cache.py  celery.py  channels.py  cors.py  csrf.py  currency.py  database.py  email.py  extra_settings.py  knox.py  logging.py  measurement.py  mfa.py  parler.py  phone_number.py  rabbitmq.py  rosetta.py  secure.py  session.py  spectacular.py  storage.py  tinymce.py
contact/: admin.py  apps.py  factories.py  managers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
core/: __init__.py  adapter.py  admin.py  apps.py  caches.py  celery.py  context_processors.py  context_processors.py~  enum.py  factories.py  forms.py  generators.py  logging.py  models.py  postgres.py  rosetta_hooks.py  rosetta_storage.py  rosetta_views.py  search.py  serializers.py  storages.py  tasks.py  units.py  urls.py  view.py  views.py  weight.py
country/: admin.py  apps.py  factories.py  filters.py  managers.py  models.py  paginators.py  serializers.py  urls.py  views.py
devtools/: apps.py  factories.py
docker/: Dockerfile  dev.Dockerfile  entrypoint.prod.sh  entrypoint.sh
docs/: order-system.md  pagination.md
email_previews/: confirmation_new.html  inactive_user_email_template.html  inactive_user_email_template.txt  newsletter.html  newsletter.txt  order_canceled.html  order_canceled.txt  order_completed.html  order_completed.txt  order_confirmation.html  order_confirmation.txt  order_delivered.html  order_delivered.txt  order_pending.html  order_pending.txt  order_pending_reminder.html  order_pending_reminder.txt  order_processing.html  order_processing.txt  order_refunded.html  order_refunded.txt  order_returned.html  order_returned.txt  order_shipped.html  order_shipped.txt  order_status_generic.html  order_status_generic.txt
helpers/: image_resize.py  seed.py
loyalty/: admin.py  apps.py  enum.py  services.py  signals.py  tasks.py  urls.py
meili/: __init__.py  _client.py  _settings.py  apps.py  batch.py  dataclasses.py  models.py  querysets.py  tasks.py
meta_capi/: __init__.py  admin.py  apps.py  client.py  events.py  exceptions.py  models.py  services.py  signals.py  tasks.py
notification/: admin.py  apps.py  consumers.py  dataclasses.py  enum.py  filters.py  groups.py  managers.py  models.py  services.py  signals.py  tasks.py  urls.py
order/: admin.py  apps.py  exceptions.py  filters.py  invoicing.py  metrics.py  models.py  notifications.py  payment.py  payment_events.py  serializers.py  services.py  shipping.py  signals.py  stock.py  tasks.py  urls.py  views.py
page_config/: admin.py  apps.py  defaults.py  models.py  serializers.py  urls.py  views.py
pay_way/: admin.py  apps.py  factories.py  filters.py  managers.py  models.py  paginators.py  serializers.py  services.py  urls.py  views.py
product/: admin.py  apps.py  forms.py  signals.py  tasks.py  urls.py
region/: admin.py  apps.py  factories.py  filters.py  managers.py  models.py  paginators.py  serializers.py  urls.py  views.py
scripts/: audit_queries.py  dedupe_po.py  delete_initial_migrations.py  fill_greek_translations.py  list_untranslated.py  migrate_webside_to_tenant.sql
search/: greeklish.py  managers.py  middleware.py  models.py  paginators.py  serializers.py  tasks.py  urls.py  utils.py  views.py
seo/: apps.py  models.py
session/: apps.py  middleware.py  serializers.py  signals.py  urls.py  views.py
shipping/: admin.py  alerts.py  apps.py  exceptions.py  factories.py  interfaces.py  services.py  urls.py  utils.py  views.py
shipping_acs/: admin.py  apps.py  carrier.py  client.py  config.py  exceptions.py  factories.py  services.py  tasks.py  urls.py
shipping_boxnow/: admin.py  apps.py  carrier.py  client.py  exceptions.py  factories.py  services.py  tasks.py  urls.py  webhook.py
slider/: admin.py  apps.py  factories.py  models.py  models.py~  paginators.py  serializers.py  urls.py  views.py
socialaccount/: login.html
static/: login-bg.svg~  test_issues.html
tag/: admin.py  managers.py  urls.py
tailwind/: input.css
tenant/: admin.py  allauth_adapter.py  apps.py  cache.py  celery.py  credentials.py  membership.py  middleware.py  middleware_ws.py  models.py  permissions.py  serializers.py  signals.py  storage.py  tasks.py  urls.py  urls_public.py  views.py
tests/: conftest.py
tip/: admin.py  apps.py  factories.py  models.py  paginators.py  serializers.py  urls.py  validators.py  views.py
user/: adapter.py  admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  (+1 more)
(+1407 files in other folders)
