[project]
version = "1.110.1"
name = "grooveshop-django-api"
authors = [
  { name = "Vasilis Totskas", email = "vassilistotskas@msn.com" }
]
description = "GrooveShop Django Backend"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
  "asgiref==3.11.1",
  "boto3==1.42.90",
  "charset_normalizer==3.4.7",
  "channels[daphne]==4.3.2",
  "channels-redis==4.3.0",
  "cryptography==46.0.7",
  "django==6.0.4",
  "django-admin-thumbnails==1.0.0",
  "django-allauth==65.16.0",
  "django-extra-settings==0.14.1",
  "django-celery-beat==2.9.0",
  "django-celery-results==2.6.0",
  "django-cors-headers==4.9.0",
  "django-simple-history==3.11.0",
  "django-filter==25.2",
  "django-unfold==0.90.0",
  "django-money==3.6.0",
  "django-mptt==0.18.0",
  "django-parler==2.3.0",
  "django-parler-rest==2.2.0",
  "django-phonenumber-field==8.4.0",
  "django-rosetta==0.10.3",
  "django-rest-knox==5.0.4",
  "django-storages==1.14.6",
  "django-tinymce==5.0.0",
  "djangorestframework==3.17.1",
  "djangorestframework-camel-case==1.4.2",
  "drf-spectacular==0.29.0",
  "fido2==2.2.0",
  "flower==2.0.1",
  "gunicorn==25.3.0",
  "importlib-resources==6.5.2",
  "measurement==3.2.2",
  "meilisearch==0.40.0",
  "phonenumbers==9.0.28",
  "pillow==12.2.0",
  "psycopg[binary,pool] == 3.3.3",
  "python-dotenv==1.2.2",
  "qrcode==8.2",
  "urllib3==2.6.3",
  "uvicorn==0.44.0",
  "celery[redis] >=5.6.3,<6.0.0",
  "disposable-email-domains==0.0.170",
  "django-stubs-ext==6.0.2",
  "twisted[http2,tls]==25.5.0",
  "dj-stripe==2.10.3",
  "defusedxml>=0.7.1",
  "nh3>=0.3.4",
  "pyjwt==2.12.1",
  "weasyprint>=68.1",
  "requests==2.32.5",
  "xmlschema==4.2.0",
]

[project.urls]
repository = "https://github.com/vasilistotskas/grooveshop-django-api"

# ─────────────────────────────────────────────────────────
# Dev (and other) dependency groups
# ─────────────────────────────────────────────────────────
[dependency-groups]
dev = [
    "coverage[toml]==7.13.5",
    "djangorestframework-stubs==3.16.9",
    "django-debug-toolbar==6.3.0",
    "django-stubs==6.0.2",
    "Faker==40.13.0",
    "factory-boy==3.3.3",
    "gitpython==3.1.46",
    "types-setuptools==82.0.0.20260408",
    "pre-commit==4.5.1",
    "pip-upgrader==2.4.4",
    "pydantic==2.13.2",
    "pylint==4.0.5",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-django==4.12.0",
    "pytest-xdist==3.8.0",
    "pytest-timeout==2.4.0",
    "pytest-cov==7.1.0",
    "python-semantic-release==10.5.3",
    "ruff==0.15.11",
    "rpds-py==0.30.0",
    "celery-stubs==0.1.3",
    "psutil==7.2.2",
    "msgpack==1.1.2",
    "hypothesis==6.152.1",
    "ty==0.0.31",
]

# ─────────────────────────────────────────────────────────
# Setuptools configuration
# ─────────────────────────────────────────────────────────
[tool.setuptools.packages]
find = {}

# ─────────────────────────────────────────────────────────
# Coverage configuration
# ─────────────────────────────────────────────────────────
[tool.coverage.paths]
source = ["."]

[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing", "thread"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/management/*",
    "*/factories/*",
    "*/manage.py",
    "*/factories.py",
    "*/setup.py",
    "asgi/gunicorn_worker.py",
    "core/storages.py",
    "*/wsgi/*",
]
source = ["."]
relative_files = true

[tool.coverage.report]
precision = 2
skip_covered = true
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "return NotImplemented",
    "if TYPE_CHECKING:",
    "if getattr(self, 'swagger_fake_view', False):",
    "if 0:",
    "if __name__ == .__main__.:",
    "def __repr__",
    "@(abstractmethod|abc.abstractmethod)",
    "if self.debug:",
    "if settings.DEBUG:",
]

[tool.coverage.html]
directory = "htmlcov"

# ─────────────────────────────────────────────────────────
# Coverage commands reference
# ─────────────────────────────────────────────────────────
# Run tests with coverage (sequential, recommended for coverage):
#   uv run pytest --cov=. --cov-report=term --cov-report=html --cov-config=pyproject.toml
#
# Run tests in parallel (fast, no coverage):
#   uv run pytest -n auto
#
# Run specific test with coverage:
#   uv run pytest tests/path/to/test.py --cov=module_name --cov-report=term
#
# Quick test run without coverage:
#   uv run pytest

# ─────────────────────────────────────────────────────────
# Semantic release configuration
# ─────────────────────────────────────────────────────────
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["setup.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install uv && uv build"
commit_message = "chore(release): release version {version} [skip ci]"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*", "dist_build/*"]

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

# ─────────────────────────────────────────────────────────
# Pytest configuration
# ─────────────────────────────────────────────────────────
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 600
addopts = "--tb=short --maxfail=0 -n auto --dist worksteal"

# ─────────────────────────────────────────────────────────
# Django-stubs configuration
# ─────────────────────────────────────────────────────────
[tool.django-stubs]
django_settings_module = "settings"

# ─────────────────────────────────────────────────────────
# Ruff configuration
# ─────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 80
exclude = ["**/migrations/**"]

[tool.ruff.lint.pylint]
max-args = 6

# ─────────────────────────────────────────────────────────
# ty type checker configuration
# ─────────────────────────────────────────────────────────
[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
# Django ORM metaclass: reverse relations, FK _id accessors,
# get_*_display(), AbstractBaseUser attrs, Celery .delay(),
# Parler/MPTT methods — ty lacks django-stubs mypy plugin support
unresolved-attribute = "ignore"
possibly-missing-attribute = "ignore"
# DRF standard pattern: serializer validate() overrides with
# different signatures are idiomatic and expected
invalid-method-override = "ignore"

[tool.ty.src]
exclude = [
    "**/migrations/**",
    # ty panics on search/views.py due to infinite cycle (ty bug)
    "search/views.py",
]

# Tests: factory_boy, DRF test client, Celery eager tasks, Mock/patch.
# missing-typed-dict-key: tests intentionally pass partial dicts to
# exercise validation error paths.
[[tool.ty.overrides]]
include = ["tests/**", "**/tests/**", "**/test_*.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
unsupported-operator = "ignore"
missing-argument = "ignore"
too-many-positional-arguments = "ignore"
not-subscriptable = "ignore"
not-iterable = "ignore"
no-matching-overload = "ignore"
missing-typed-dict-key = "ignore"

# factory_boy stubs: class-level SubFactory/LazyFunction descriptors
# are typed as the wrapper, not the resolved model attribute, so
# reassigning them on instances trips invalid-assignment.
[[tool.ty.overrides]]
include = [
    "**/factories/**",
    "**/factories.py",
]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"

# Library type stub limitations: measurement, ASGI, drf-spectacular,
# django-money, factory_boy, meilisearch SDK
[[tool.ty.overrides]]
include = [
    "core/fields/**",
    "core/forms/**",
    "core/filters/**",
    "core/utils/**",
    "asgi/**",
    "admin/**",
    "meili/**",
    "devtools/**",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
not-subscriptable = "ignore"
not-iterable = "ignore"
call-non-callable = "ignore"
no-matching-overload = "ignore"
too-many-positional-arguments = "ignore"
unsupported-operator = "ignore"
invalid-return-type = "ignore"
